src/app/component/snapshots/jedit__app__component__loading__test__render_test-2.snap
---
source: src/app/component/loading.rs
expression: render_to_string(&loading)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 ┌────────────┐                                 "
"                                 │            │                                 "
"                                 │ Loading.   │                                 "
"                                 │            │                                 "
"                                 └────────────┘                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
